terraform/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

provider "aws" {
  region = "us-east-1"
}

data "aws_caller_identity" "current" {} # unique bucket name

# creating an insecure s3 bucket
resource "aws_s3_bucket" "insecure_bucket" {
  bucket = "compliance-demo-insecure-${data.aws_caller_identity.current.account_id}"
}

# remove AWS blocking feature 
resource "aws_s3_bucket_public_access_block" "insecure_bucket_access" {
  bucket = aws_s3_bucket.insecure_bucket.id

  block_public_acls       = false
  block_public_policy     = false
  ignore_public_acls      = false
  restrict_public_buckets = false
}

# creating a secure s3 bucket
resource "aws_s3_bucket" "compliant_bucket" {
  bucket = "compliance-demo-compliant-${data.aws_caller_identity.current.account_id}"
}

resource "aws_s3_bucket_public_access_block" "compliant_bucket_access" {
  bucket = aws_s3_bucket.compliant_bucket.id

  block_public_acls       = true
  block_public_policy     = true
  ignore_public_acls      = true
  restrict_public_buckets = true
}

# every object written in the secure bucket must be encrypted with AWS256 before being stored 
resource "aws_s3_bucket_server_side_encryption_configuration" "compliant_bucket_encryption" {
  bucket = aws_s3_bucket.compliant_bucket.id

  rule {
    apply_server_side_encryption_by_default {
      sse_algorithm = "AES256"
    }
  }
}

# security group (SG) with SSH misconfig on port 22
resource "aws_security_group" "insecure_sg" {
  name        = "insecure-sg-${data.aws_caller_identity.current.account_id}"
  description = "Intentionally insecure - SSH open to the world"

  ingress {
    description = "SSH from anywhere"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "compliant_sg" {
  name        = "compliant-sg-${data.aws_caller_identity.current.account_id}"
  description = "Compliant - SSH restricted to internal network only"

  ingress {
    description = "SSH from internal network only"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }
}

# security group (SG) with RDP misconfig on port 3389
resource "aws_security_group" "insecure_sg_rdp" {
  name        = "insecure-sg-rdp-${data.aws_caller_identity.current.account_id}"
  description = "Intentionally insecure - RDP open to the world"

  ingress {
    description = "RDP from anywhere"
    from_port   = 3389
    to_port     = 3389
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "compliant_sg_rdp" {
  name        = "compliant-sg-rdp-${data.aws_caller_identity.current.account_id}"
  description = "Compliant - RDP restricted to internal network only"

  ingress {
    description = "RDP from internal network only"
    from_port   = 3389
    to_port     = 3389
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }
}

# versioning of bucket - avoids overwriting/deleting 
resource "aws_s3_bucket_versioning" "compliant_bucket_versioning" {
  bucket = aws_s3_bucket.compliant_bucket.id

  versioning_configuration {
    status = "Enabled"
  }
}

# EBS volume - hard drive on EC2 server
resource "aws_ebs_volume" "insecure_volume" {
  availability_zone = "us-east-1a"
  size = 10
  encrypted = false
}

resource "aws_ebs_volume" "compliant_volume" {
  availability_zone = "us-east-1a"
  size = 10
  encrypted = true
}

# relational database service
resource "aws_db_instance" "insecure_db" {
  identifier           = "insecure-db-${data.aws_caller_identity.current.account_id}"
  allocated_storage    = 10
  engine               = "mysql"
  engine_version       = "8.0"
  instance_class       = "db.t3.micro"
  username             = "admin"
  password             = "admin123!"
  publicly_accessible  = true
  storage_encrypted    = false
  skip_final_snapshot  = true
}

resource "aws_db_instance" "compliant_db" {
  identifier          = "compliant-db-${data.aws_caller_identity.current.account_id}"
  allocated_storage   = 10
  engine              = "mysql"
  engine_version      = "8.0"
  instance_class      = "db.t3.micro"
  username            = "admin"
  password            = var.compliant_db_password # variables.tf
  publicly_accessible = false
  storage_encrypted   = true
  skip_final_snapshot = true
}

# IAM privileges
resource "aws_iam_policy" "insecure_policy" {
  name = "insecure-policy-${data.aws_caller_identity.current.account_id}"

  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Effect   = "Allow"
        Action   = "*"
        Resource = "*"
      }
    ]
  })
}

resource "aws_iam_policy" "compliant_policy" {
  name = "compliant-policy-${data.aws_caller_identity.current.account_id}"

  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Effect   = "Allow"
        Action   = ["s3:GetObject", "s3:PutObject"]
        Resource = "arn:aws:s3:::compliance-demo-compliant-${data.aws_caller_identity.current.account_id}/*"
      }
    ]
  })
}

resource "aws_security_group" "test_ipv6_open" {
  name        = "test-ipv6-open"
  description = "TEST ONLY - SSH open to the world over IPv6"

  ingress {
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    ipv6_cidr_blocks = ["::/0"]
  }
}
